src/objects/MUSW__Master_Distribution_List__c.object
<CustomObject>
    <description>Master control table to determine which fees, receipts, deposits, etc values will set which Fund Accounting outcomes via DRE rules. Can be used to allow non-admin users with appropriate permissions to edit their own criteria and outcome values.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Event__c</fullName>
        <label>Business Event</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Code__c</fullName>
        <label>Credit Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Debit_Code__c</fullName>
        <label>Debit Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>&quot;=Today()&quot;</defaultValue>
        <label>Effective Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Amount__c</fullName>
        <label>Old Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Account__c</fullName>
        <label>Transaction Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>TextArea</type>
    </fields>
    <label>Master Distribution List</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>Business_Event__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Credit_Code__c</columns>
        <columns>Debit_Code__c</columns>
        <columns>Transaction_Account__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Distribution Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>